--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,15 @@
  *= require_self
  *= require_tree .
  */
+body{
+	padding-top: 50px;
+}
+
+.status {
+	border-bottom: solid 1px #CCC;
+	padding: 5px 0;
+}
+
+.status p {
+	margin: 4px 0;
+}
