--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -2,7 +2,7 @@
   <h1>All of the statuses</h1>
 </div>
 <% @statuses.each do |status|%>
-  <div>
+  <div class = "status">
     <strong><%= status.name %></strong>
     <p><%= status.content %></p>
 
