added layout and bootstrap

--- a/app/assets/stylesheets/statuses.css.scss
+++ b/app/assets/stylesheets/statuses.css.scss
@@ -11,3 +11,14 @@
 	margin: 4px 0;
 }
 
+.status .admin {
+	display:none;
+}
+
+.status:hover{
+	background:#F0F0F0;
+}
+
+.status:hover .admin {
+	display:inline;
+}
