--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -1,6 +1,12 @@
 <div class = "page header">
   <h1>All of the statuses</h1>
 </div>
+
+<div class="post_button">
+  <%= link_to "Post a new status", new_status_path, class: "btn btn-success" %>
+</div>
+
+
 <% @statuses.each do |status|%>
   <div class = "status">
     <strong><%= status.name %></strong>
