--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -9,7 +9,7 @@
 <% @statuses.each do |status|%>
 
 <div class = "status">
-  <p><strong><%= status.user.first_name %></strong></p>
+  <p><strong><%= status.user.full_name %></strong></p>
   <p><%= status.content %></p>
 
 
