wrote tests for first_name, last_name, profile_name, added validations

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,7 @@
 
 
     <fieldset>
-      <legend>Sign In</legend>
+      <legend>Sign Up</legend>
       <%= f.input :email %>
       <%= f.input :password %>
 
