Styled the alerts and notices + Changed the routes for login, logout, register and feed

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,7 @@
 
 
     <fieldset>
-      <legend>Sign Up</legend>
+      <legend>Register</legend>
       <%= f.input :email %>
       <%= f.input :password %>
 
@@ -22,6 +22,6 @@
   </div>
 
   <div class = "span8">
-    <h2>Sign up now and be part of the biggest social network in the world</h2>
+    <h2>Register now and be part of the biggest social network in the world</h2>
   </div>
 
