--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,2 +1,23 @@
-<h1>Profiles#show</h1>
-<p>Find me in app/views/profiles/show.html.erb</p>
+<div class="page-header">
+	<h1><%= @user.first_name %></h1>
+</div>
+
+<% if @statuses %>
+	<% @statuses.each do |status| %>
+		<div class = "status">
+  			<p><strong><%= status.user.full_name %></strong></p>
+  				<p><%= status.content %></p>
+
+
+			<div class = "meta">
+	  		<%= link_to time_ago_in_words(status.created_at) + " ago", status %>
+
+	  			<span class = "admin">
+	    			| <%= link_to "Edit", edit_status_path(status) %>
+	    			| <%= link_to "Delete", status, method: :delete, data:{confirm: "Are you sure?"} %>
+	  			</span>
+
+			</div>
+		</div>
+	<% end %>
+<% end %>
