--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -1,26 +1,33 @@
 <div class = "page header">
-  <h1>All of the statuses</h1>
+	<h1>All of the statuses</h1>
 </div>
 
 <div class="post_button">
-  <%= link_to "Post a new status", new_status_path, class: "btn btn-success" %>
+	<%= link_to "Post a new status", new_status_path, class: "btn btn-success" %>
 </div>
 
 <% @statuses.each do |status|%>
 
 <div class = "status">
-  <p><strong><%= status.user.full_name %></strong></p>
-  <p><%= status.content %></p>
+	<div class ="row">
+		<div class = "span1">
+			<%= image_tag status.user.gravatar_url %>
+		</div>
+		<div class = "span7">
+			<p><strong><%= status.user.full_name %></strong></p>
+			<p><%= status.content %></p>
 
 
-<div class = "meta">
-  <%= link_to time_ago_in_words(status.created_at) + " ago", status %>
+			<div class = "meta">
+				<%= link_to time_ago_in_words(status.created_at) + " ago", status %>
 
-  <span class = "admin">
-    | <%= link_to "Edit", edit_status_path(status) %>
-    | <%= link_to "Delete", status, method: :delete, data:{confirm: "Are you sure?"} %>
-  </span>
+				<span class = "admin">
+					| <%= link_to "Edit", edit_status_path(status) %>
+					| <%= link_to "Delete", status, method: :delete, data:{confirm: "Are you sure?"} %>
+				</span>
 
-</div>
+			</div>
+		</div>
+	</div>
 </div>
 <% end %>
