--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,27 +1,27 @@
-<div class ="row">
-  <div class="span4">
+<h2>Register</h2>
 
-  <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: {class: "well"}) do |f| %>
- 
+<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+  <%= devise_error_messages! %>
 
+    <div><%= f.label :first_name %><br />
+  <%= f.text_field :first_name, :autofocus => true %></div>
 
-    <fieldset>
-      <legend>Register</legend>
-      <%= f.input :email %>
-      <%= f.input :password %>
+    <div><%= f.label :last_name %><br />
+  <%= f.text_field :last_name, :autofocus => true %></div>
 
-      <%if devise_mapping.rememberable? %>
-        <div><%= f.input :remember_me, as: :boolean %></div>
-      <% end %>
+      <div><%= f.label :profile_name %><br />
+  <%= f.text_field :profile_name, :autofocus => true %></div>
 
-      <div><%=f.submit "Sign in", class:"btn btn-success" %></div>
-    </fieldset>
-    <% end %>
+  <div><%= f.label :email %><br />
+  <%= f.email_field :email, :autofocus => true %></div>
 
-    
-  </div>
+  <div><%= f.label :password %><br />
+  <%= f.password_field :password %></div>
 
-  <div class = "span8">
-    <h2>Register now and be part of the biggest social network in the world</h2>
-  </div>
+  <div><%= f.label :password_confirmation %><br />
+  <%= f.password_field :password_confirmation %></div>
 
+  <div><%= f.submit "Register" %></div>
+<% end %>
+
+<%= render "devise/shared/links" %>
