--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,6 +1,8 @@
 <div class="page-header">
 	<h1><%= @user.first_name %></h1>
+	<%= link_to "Add friend", new_user_friendship_path(friend_id: @user), class: "btn" %>
 </div>
+
 
 <% if @statuses %>
 	<% @statuses.each do |status| %>
